--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dog-app",
-  website: "https://dog-app-1.netlify.app/",
+  "website": "https://dog-app-1.netlify.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
