--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dog-app",
   "version": "0.1.0",
-  "homepage": "https://dogdoggy.netlify.app",
+  "homepage": ".",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
